# sunray

./: Cargo.toml  README.md  image.ppm
hqrenders/: finalrender_10kspp.ppm  spacedonut_10k.ppm
renders/: fail1.ppm  image12.ppm  image13.ppm  image14.ppm  image15.ppm  image17.ppm  image18.ppm  image19.ppm  image23.ppm
src/: aabb.rs  bvh.rs  camera.rs  hit_record.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  onb.rs  pdf.rs  perlin.rs  ray.rs  renderer.rs  scenes.rs  texture.rs  vec3.rs
src/hittable/: cube.rs  cylinder.rs  flip_face.rs  medium.rs  mod.rs  moving_sphere.rs  pyramid.rs  rectangle.rs  rotate.rs  sdf.rs  sphere.rs  translate.rs  triangle.rs
